# endo-api

./: .dockerignore  .env.example  .env.prod.example  .envrc  .gitignore  .gitmodules  Dockerfile.dev  Dockerfile.prod  Makefile  README.md  README_NEW.md  app_config.nix  debug-lx-vars.nix  default.nix  devenv.nix  docker-compose.prod.yml.backup-20250831  docker-compose.yml.backup-20250831  docker-entrypoint-prod.sh  docker-entrypoint.sh  endo-api-service.nix  env_setup.py  manage.py  nginx.conf  notes.md  pyproject.toml  pytest.ini  refactor_plan.md  review-clean-architecture.sh.backup-20250831  status-summary.json  test-clean-implementation.sh  test-container-functionality.sh  test-containers.sh  test-runner.sh  validate-system.sh.backup-20250831
.github/workflows/: ci.yml
conf_template/: db.yaml  default.env
config/: __init__.py
config/settings/: __init__.py  central.py  dev.py  prod.py  test.py
container/: Dockerfile.dev  Dockerfile.prod  README.md  docker-entrypoint-prod.sh  docker-entrypoint.sh
devenv/: build_inputs.nix  containers.nix  default.nix  environment.nix  management.nix  processes.nix  runtime_packages.nix  scripts.nix  services.nix  tasks.nix  vars.nix
docs/: CENTRALIZED_CONFIG_GUIDE.md  CONTAINER_MANAGEMENT_GUIDE.md  NATIVE_DEVENV_CONTAINERS_GUIDE.md  README.md  devenv-testing.md  luxnix-implementation-info.md  makefile_dguide.md  rke2_docs.md
docs/archive/: README_OLD.md
docs/implementation-reports/: CLEANUP_ANALYSIS_REPORT.md  CLEANUP_COMPLETE_REPORT.md  CLEANUP_PROGRESS_REPORT.md  CONTAINER_IMPLEMENTATION_SUMMARY.md  CONTAINER_ORGANIZATION_SUMMARY.md  DEVENV_COMPREHENSIVE_REVIEW.md  DEVENV_DRY_OPTIMIZATION_REPORT.md  DEVENV_TESTING_IMPLEMENTATION_REPORT.md  DOCUMENTATION_CLEANUP_COMPLETE.md  FINAL_CLEANUP_STATUS.md  HETZNER_DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  PROJECT_CLEANUP_SUMMARY.md  final-scripts-cleanup-report.md  ingress_nginx_docker.yaml  rancher_ui_endo_api_pod_configuration.yaml  scripts-reorganization-report.md
endo_api/: __settings.py  asgi.py  local_settings_stub.py  settings.py  settings_central.py  settings_dev.py  settings_prod.py  settings_test.py  urls.py  wsgi.py
endo_api/settings_base/: __init__.py  env.py
k8s/: deployment.tmpl.yaml  ingress.tmpl.yaml  namespace.yaml  pvc.yaml  service.yaml
legacy_scripts_backup/: config-manager.sh  config_manager.py  container-dev.sh  deploy-prod.sh  docker-cleanup.sh  docker-manager.sh  env_manager.py  setup_project.py  switch-mode.sh
luxnix_reference/: client.nix  endo-api-role.nix  endo-api-service.nix
lx_annotate/: __init__.py  settings.py
scripts/: README.md  environment.py  gpu-check.py  make_conf.py  set_central_settings.py  set_development_settings.py  set_production_settings.py
scripts/archive/: analyze_outdated_code.py  env_setup.py  migrate_to_unified_management.py  tasks.nix  validate-system.sh
scripts/core/: environment.py  server-run.sh  setup.py  system-validation.sh
scripts/cuda/: README.md
tests/: smoke_tests.py  test_centralized_config.py  test_container_workflow.py  test_container_workflow.sh  test_database_connectivity.py  test_db_config.py  test_env_priority.py
tests/archive/: README.md  test-functions.sh
tests/legacy/: README.md  test-containers.sh  test-functions.sh
