[project]
name = "endo-api"
version = "1.0.1"
description = "EndoReg Db API Service"
readme = "README.md"
requires-python = ">=3.12,<3.13"

authors = [
    { name = "Thomas J. Lux", email = "lux_t1@ukw.de" },
    { name = "Max Hild" },
    { name = "Hamza Zahid" },
    { name = "Peter Kowalczyk" },
]
maintainers = [
    { name = "Thomas J. Lux", email = "lux_t1@ukw.de" },
    { name = "Max Hild" },
    { name = "Hamza Zahid" },
    { name = "Peter Kowalczyk" },
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",

    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "asgiref>=3.9.1",
    "daphne>=4.2.1",
    "django-cors-headers>=4.7.0",
    "django-extensions>=4.1",
    "endoreg-db>=0.8.1",
    "mypy>=1.17.1",
    "nvidia-ml-py>=13.580.65",
    "psycopg[binary]>=3.2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    # "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["endo_api"]

[tool.setuptools]
packages = ["endo_api"]

[tool.uv.sources]
# This section tells uv (used by devenv) to use local paths instead of PyPI
# uv should install these editably by default for path sources.
# Ensure the paths are correct relative to *this* pyproject.toml file.
# # Ensure the target directories contain their own pyproject.toml or setup.py.
# endoreg-db = { path = "libs/endoreg-db", editable = true } # Explicitly editable
# lx-anonymizer = { path = "libs/lx-anonymizer", editable = true } # Explicitly editable

[tool.uv] # Remove when endoreg-db pyproject.toml is updated to not include a local endoreg-db source
# override-dependencies = ["lx-anonymizer==0.7.0"]

# Linting configuration for luxnix compatibility
[tool.ruff]
# Ignore missing imports for local_settings (luxnix-generated file)
extend-ignore = [
    "F401",  # Imported but unused (for wildcard imports in Django settings)
    "F403",  # Star imports (Django settings pattern)
]

[tool.ruff.per-file-ignores]
# Django settings files use wildcard imports and may import local_settings
"endo_api/settings*.py" = ["F401", "F403", "E402"]
"endo_api/local_settings*.py" = ["F401", "F403"]

# Ignore import errors for luxnix-generated files
[tool.pylsp-mypy]
overrides = ["--ignore-missing-imports", true]

[tool.mypy]
# Handle missing local_settings module (generated by luxnix)
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "local_settings"
ignore_missing_imports = true
